--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 
   <body>
 
+    <nav>
+      <ul>
+        <li> <a href="/users">Users</a> </li>
+        <li> <a href="/photos">Photos</a> </li>
+     </ul>
+    </nav>
+
     <%= yield %>
+
+    Copyright 2020, Appdev team
   </body>
 </html>
