--- a/app/views/user_templates/index.html.erb
+++ b/app/views/user_templates/index.html.erb
@@ -26,7 +26,7 @@
     </td>
 
     <td>
-      <a href="/users/"> Show details </a>
+      <a href="/users/<%= a_user.username %>"> Show details </a>
     </td>
   </tr>
   <% end %>
